--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@heroicons/react": "^2.0.16",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
+    "@nivo/core": "^0.80.0",
+    "@nivo/line": "^0.80.0",
+    "@nivo/radial-bar": "^0.80.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
