--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "firebase": "^9.17.1",
     "next": "13.2.1",
     "next-themes": "^0.2.1",
+    "papaparse": "^5.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "read-excel-file": "^5.6.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
