--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.2.1",
     "firebase": "^9.17.1",
     "next": "13.2.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "papaparse": "^5.4.0",
     "react": "18.2.0",
