--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,14 @@
   "short_name": "SS ITESM",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/logo192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
 
     {
-      "src": "/icon-512x512.png",
+      "src": "/logo512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
